[metadata]
name = page
module = page
version = 0.1.9
url = https://github.com/fmalina/page
author = F. Malina
author_email = fmalina@pm.me
description = Static website generator
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD License
keywords = CMS, static
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Topic :: Documentation
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System
project_urls =
    Funding = https://unilexicon.com/fm/pay.html

[options]
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    page = page.gen:cli
